--- a/data/projectes_cat.json
+++ b/data/projectes_cat.json
@@ -119,7 +119,7 @@
 
   {
     "categoria": "investigacio",
-    "slug": "the-backrooms",
+    "slug": "backrooms",
     "titol": "the backrooms",
     "espai": "",
     "ciutat": "",
@@ -130,7 +130,7 @@
 
   {
     "categoria": "investigacio",
-    "slug": "youre-invited-to-my-room",
+    "slug": "sobre-fanfiction",
     "titol": "you're invited to my room",
     "espai": "",
     "ciutat": "",
